--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             background-repeat: no-repeat;
             margin: 0;
             padding: 0;
+            zoom: 0.33;
         }
 
         @media (max-width: 768px) {
@@ -123,7 +124,7 @@
 
     <audio id="birthdaySong" loop>
         <source src="birthday_song3.mp3" type="audio/mp3">
-        <source src="birthday_song2.ogg" type="audio/ogg">
+        <source src="birthday_song3.ogg" type="audio/ogg">
         Your browser does not support the audio element.
     </audio>
 
