Changing auto play

--- a/index.html
+++ b/index.html
@@ -66,9 +66,8 @@
         p {
             color: black;
             font-size: 68px;
-            white-space: nowrap; /* Prevent text wrapping to the next line */
-            overflow: hidden; /* Hide overflowing text */
-            animation: running-text 15s linear infinite; /* Run the animation continuously for 15 seconds */
+            white-space: nowrap;
+            animation: running-text 15s linear infinite;
         }
 
         @keyframes running-text {
