Changing auto play

--- a/index.html
+++ b/index.html
@@ -154,6 +154,9 @@
                 playPauseButton.textContent = 'Play The Song';
             }
         });
+
+        // Uncomment the next line if you want to attempt auto-play
+        // birthdaySong.play();
     </script>
 
 </body>
