--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 background-image: url('MobileBackground.jpeg');
                 background-size: cover;
                 max-height: 50px;
+                overflow: hidden;
             }
         }
 
