--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             background-repeat: no-repeat;
             margin: 0;
             padding: 0;
-            zoom: 0.33;
+            zoom: 0.28;
         }
 
         @media (max-width: 100px) {
@@ -42,13 +42,13 @@
 
         img {
             max-width: 100%;
-            height: 1400px;
+            height: 1700px;
             border-radius: 50%;
             margin-top: 20px;
         }
 
         .glide {
-            max-width: 1300px;
+            max-width: 1700px;
             margin: auto;
         }
 
@@ -93,6 +93,7 @@
             cursor: pointer;
             border: none;
             border-radius: 5px;
+            margin-bottom: 10px;
         }
 
         button:hover {
@@ -119,6 +120,9 @@
                     <img src="birthday_image8.jpeg" alt="Birthday Celebration 7" class="fifth-image">
                     <img src="birthday_image9.jpeg" alt="Birthday Celebration 8" class="fifth-image">
                     <img src="birthday_image7.jpeg" alt="Birthday Celebration 9" >
+                    <img src="birthday_image10.jpeg" alt="Birthday Celebration 10" >
+                    <img src="birthday_image11.jpeg" alt="Birthday Celebration 11" >
+                    <img src="birthday_image12.jpeg" alt="Birthday Celebration 12" class="fifth-image">
                 </div>
             </div>
         </div>
