Changing Horizontal Zoom

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
         body {
             font-family: 'Arial', sans-serif;
             text-align: center;
-            background-image: url('Background.jpeg'); /* Replace 'Background.jpeg' with your image file */
-            background-size: cover; /* Adjust the background-size property as needed */
+            background-image: url('Background.jpeg');
+            background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
             margin: 0;
             padding: 0;
             zoom: 0.28;
+            overflow-x: hidden; /* Prevent horizontal scrolling */
         }
 
         @media (max-width: 100px) {
