--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
         body {
             font-family: 'Arial', sans-serif;
             text-align: center;
-            background-image: url('Background.jpeg');
-            background-size: cover;
+            background-image: url('Background.jpeg'); /* Replace 'Background.jpeg' with your image file */
+            background-size: cover; /* Adjust the background-size property as needed */
             background-position: center;
             background-repeat: no-repeat;
             margin: 0;
             padding: 0;
-            zoom: 0.28;
-            overflow-x: hidden; /* Prevent horizontal scrolling */
+           
         }
 
         @media (max-width: 100px) {
@@ -28,6 +27,10 @@
                 background-image: url('MobileBackground.jpeg');
                 background-size: cover;
                 max-height: 100vh;
+            }
+
+            p {
+                font-size: 36px;
             }
         }
         header {
@@ -43,13 +46,13 @@
 
         img {
             max-width: 100%;
-            height: 1700px;
+            max-height: 70vh;
             border-radius: 50%;
             margin-top: 20px;
         }
 
         .glide {
-            max-width: 1700px;
+            max-width: 1300px;
             margin: auto;
         }
 
@@ -94,7 +97,6 @@
             cursor: pointer;
             border: none;
             border-radius: 5px;
-            margin-bottom: 10px;
         }
 
         button:hover {
@@ -121,15 +123,12 @@
                     <img src="birthday_image8.jpeg" alt="Birthday Celebration 7" class="fifth-image">
                     <img src="birthday_image9.jpeg" alt="Birthday Celebration 8" class="fifth-image">
                     <img src="birthday_image7.jpeg" alt="Birthday Celebration 9" >
-                    <img src="birthday_image10.jpeg" alt="Birthday Celebration 10" >
-                    <img src="birthday_image11.jpeg" alt="Birthday Celebration 11" >
-                    <img src="birthday_image12.jpeg" alt="Birthday Celebration 12" class="fifth-image">
                 </div>
             </div>
         </div>
         
         <p>Selamat Ulang Tahun Daddy, Semoga Panjang Umur Sehat Selalu Dan Terus Bahagia Ya!</p>
-        <button id="playPauseButton">Play The Song</button>
+        <button id="play">Play The Song</button>
     </section>
 
     <audio id="birthdaySong" loop>
@@ -140,32 +139,28 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
     <script>
-        new Glide('.glide').mount();
+        document.addEventListener('DOMContentLoaded', function () {
+            new Glide('.glide').mount();
 
-        const images = document.querySelectorAll('.glide__slides img');
-        let currentIndex = 0;
+            const images = document.querySelectorAll('.glide__slides img');
+            let currentIndex = 0;
 
-        function changeImage() {
-            images.forEach(image => image.classList.remove('active'));
-            images[currentIndex].classList.add('active');
-            currentIndex = (currentIndex + 1) % images.length;
-        }
-
-        setInterval(changeImage, 3000);
-
-        const playPauseButton = document.getElementById('playPauseButton');
-        const birthdaySong = document.getElementById('birthdaySong');
-
-        playPauseButton.addEventListener('click', () => {
-            if (birthdaySong.paused) {
-                birthdaySong.play();
-                playPauseButton.textContent = 'Pause The Song';
-            } else {
-                birthdaySong.pause();
-                playPauseButton.textContent = 'Play The Song';
+            function changeImage() {
+                images.forEach(image => image.classList.remove('active'));
+                images[currentIndex].classList.add('active');
+                currentIndex = (currentIndex + 1) % images.length;
             }
+
+            setInterval(changeImage, 3000);
+
+            // Play button functionality
+            let playButton = document.getElementById("play");
+            function playMusic() {
+                let audio = new Audio("birthday_song3.mp3"); // Change the audio file name
+                audio.play();
+            }
+            playButton.addEventListener("click", playMusic);
         });
     </script>
-
 </body>
 </html>
